scss/main.scss
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


/* Scrollbar */

html {
  --scrollbarBG: #333;
  --thumbBG: #90A4AE;
}
body::-webkit-scrollbar {
  width: 11px;
}
body {
  scrollbar-width: thin;
  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
}
body::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
}
body::-webkit-scrollbar-thumb {
  background-color: var(--thumbBG) ;
  border-radius: 6px;
  border: 3px solid var(--scrollbarBG);
}

/*-------------*/


.text-black{
  color: #000;
}


html {
  background-color: #000;
}

body{
  font-family: 'Dosis', sans-serif;
  background-color: #f4f4f4;
  line-height: 1.5;
}

ul{
  list-style: none;
}

a {
  text-decoration: none;
  color: #333;
  font-weight: bold;
}

img {
  width: 100%;
}

%btn-shared{
  display: inline-block;
  padding: 0.7rem 2rem;
  border: none;
  cursor: pointer;
  transition: background 0.5s;
}

.btn{
  
  &-light{
    @extend %btn-shared;
    background-color: #f4f4f4;
    color: #333;
  }

  &-dark{
    @extend %btn-shared;
    background-color: #333;
    color: #fff;
  }

}

button[class^='btn-']:hover,
a[class^='btn-']:hover,
input[class^='btn-']:hover {
  background-color: rgb(189, 123, 75);
  color: #fff;
}

.container {
  max-width: 1280px;
  margin: auto;
  padding: 0 2rem;
  overflow: hidden;
}

.logo {
  width: 250px;
}

header {
  background: url(../img/showcase.jpg) no-repeat center right/cover;
  height: 100vh;
}

#main-nav{
  margin-top: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  
  ul{
    display: flex;

    li {
      padding: 0.5rem 1rem;
      margin-right: 0.3rem;

      a{
        text-transform: uppercase;
        color: #f4f4f4;
        padding-bottom: .5rem;
        border-bottom: 3px solid transparent;
        transition: border-color 0.5s;

        &:hover{
          border-color: #fff;
        }

        &.current {
          border-color:rgb(189, 123, 75);
        }

      }
    }

  }
}

.showcase{
  height: 100%;
  margin-top: 20%;
  display: flex;
  flex-direction: column;
  justify-self: center;
  align-items: center;
  text-align: center;
  color: #f4f4f4;

  h1 {
    font-size: 4rem;
    color: #f4f4f4;

  }

  p{
    font-size: 1.3rem;
    margin-bottom: 2rem;
    color: #f4f4f4;
  }
 
}

.txt-type{
  color: rgb(240, 162, 106);
  -webkit-text-stroke: 0.1px black;
}




#items{
  
  margin-top: 2rem;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 1rem;
  text-align: center;
  align-items: center;

  img {
    width: 100%;
    height: 230px;
  }

}

.item{
  position: relative;
  overflow: hidden;
}

.title {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 15%;
  color: #f4f4f4;
  background: rgba(00, 00, 00, 0.5);
  transform: translateY(-150%);
  transition: opacity, transform 1s ease-out;
}

#launch {
  position: absolute;
  z-index: 3;
  bottom: 5%;
  transform: translateY(200%);
  transition: background 0.5s ease-in-out, color 0.5s ease-in-out, transform 1s ease-out;
}


#launch:hover{
  background: #333;
}

.item:hover .title {
  transform: none;
}

.item:hover #launch {
  transform: none;
}

.my {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

form{
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 1rem;
  textarea{
    grid-column: 1/span 2;
    height: 5rem;
    border: none ;
    padding: .5rem;
    background-color: #333;
    color: #f6f6f6;
  }

  input{
    height: 1.5rem;
    border: none ;
    padding: .5rem;
    background-color: #333;
    color: #f6f6f6;

  }

}

::placeholder{
  color: #f6f6f6;
}

#context {
  text-align: center;
  margin-top: 1.5rem;
  padding-bottom: 2rem;
  color: #f6f6f6;


}


#submit {
  grid-column: 1/span 2;
  margin: 1rem auto;
  padding-left: 7rem;
  padding-right: 7rem;
}

label {
  display: none;
}

textarea:focus, input:focus {
  outline-color: rgb(189, 123, 75);
  border-color: rgb(189, 123, 75);
}

#about {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-gap: 2rem;
  margin: 2rem;
  text-align: center;
  font-size: 1.2rem;
  color: #f4f4f4;

  &-img {
    width: 100%;
    height: 100%;
  }

  ul {
    text-align: left;
    font-weight: bold;
  }
  li{
    font-weight: normal;
  }

  &-text {
    padding-top: 2rem;
    padding-left: 1rem;
    border-left: 5px solid rgb(240, 162, 106);
    background-color: rgba($color: #000, $alpha: 0.3);
    padding-bottom: 2rem;
  }

}

.bold {
  font-weight: bolder;
}

html {
  position: relative;
}

body {
  background-attachment: fixed;
  z-index: -10;
  background: url(../img/showcase.jpg) no-repeat center right/cover;
  height: 100vh;
}


@media (max-width:500px) {
  body {
    line-height: 1;
  }

    #main-nav {
      display: flex;
      flex-direction: column;
      height: 5rem;
      padding-bottom: 6rem;

      ul {
        margin-top: 1.5rem;
      }
  
      a {
        font-size: 1.1rem;
      }
      
    }
  
    .container {
      padding: 0 0.5rem;
    }

.showcase {
  h1 {
    font-size: 2.2rem;
  }

  p {
    margin-top: 2rem;
  }

  .btn-light {
    font-size: 1.3rem;
  }

}    

.txt-type {
  -webkit-text-stroke: 0;
}

.inner {
  height: 7rem;
}

#items {
  display: block;
  margin-top: 3rem;
}

.item {
  margin-top: 1rem;
}

.title {
  transform: none;
}

#launch {
  transform: none;
}

#about {
  display: block;

  &-img {
    margin-bottom: 1rem;
  }

  &-text {
    padding: 0;
    border-left: none;
    border-top: 5px solid rgb(240, 162, 106);
    padding: 1rem;
    background-color: rgba(00, 00, 00, 0.7);
  }

}

#context {
  margin-top: 2rem;
  font-size: 3rem;
}

form {
  display: flex;
  flex-direction: column;
  input ,textarea{
    margin-top: 1rem;
    height: 2rem;
  }

  textarea {
    height: 8rem;
  }

  .btn-dark {
    width: 80%;
    font-size: 1rem;
  }

}

#submit {
  text-align: center;
  padding: 0.7rem 7rem;
}


html {
  background: #000;
}

 body {
  background: url(../img/showcase.jpg) no-repeat center center/cover;
}

 header {
  background: url(../img/showcase.jpg) no-repeat center center/cover;
}

 ::placeholder {
   font-size: 1.1rem;
   font-family: 'Dosis';
 }

 textarea {
   padding-bottom: 1rem;
 }

}

